Fixed the scrolling problem - overflow: hidden in css file

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,6 @@ body {
   font: 300 36px "Helvetica Neue";
   height: 640px;
   margin: 20px;
-  overflow: hidden;
   position: relative;
   width: 960px;
 }
